# GraphicsHW5

./: .clang-format  CMakeLists.txt  Makefile
src/: CMakeLists.txt  dummy.cc  ik.cc  main.cc
